# scrappy-do

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs
scrappy_do-codegen/: Cargo.toml
scrappy_do-codegen/src/: lib.rs
src/: callback.rs  handler.rs  lib.rs  spider.rs  util.rs
