[package]
name = "scrappy_do"
version = "0.1.0"
authors = ["Matt Belle <mattbelle17@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A concurrent asynchronous webscraping framework."
repository = "https://github.com/MattBelle/scrappy-do"
keywords = ["async", "web", "http", "framework", "tokio"]
categories = ["asynchronous", "concurrency", "network-programming", "web-programming"]

[dependencies]
scrappy_do_codegen = { path = "./scrappy_do-codegen/", version = "0.1.0" }
futures = "0.3"
reqwest = "^0.11"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
scraper = "0.12"
thiserror = "1"
slog = "2.7"
slog-stdlog = "4.1"
pin-project = "1"
async-stream = "0.3"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

[workspace]
members = ["scrappy_do-codegen"]
