[package]
name = "scrappy_do"
version = "0.2.0"
authors = ["Matt Belle <mattbelle17@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A concurrent asynchronous webscraping framework."
repository = "https://github.com/MattBelle/scrappy-do"
keywords = ["async", "web", "http", "framework", "tokio"]
categories = ["asynchronous", "concurrency", "network-programming", "web-programming"]

[dependencies]
scrappy_do_codegen = { path = "./scrappy_do-codegen/", version = "0.1.0" }
async-stream = "0.3"
futures = "0.3"
pin-project = "1"
reqwest = "^0.11"
scraper = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tracing-futures = "0.2.5"
url = "2"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.2"

[workspace]
members = ["scrappy_do-codegen"]
