[package]
name = "scrappy_do_codegen"
version = "0.2.0"
authors = ["Matt Belle <mattbelle17@gmail.com>"]
edition = "2018"
license-file = "../LICENSE.md"
description = "Macros used by scrappy-do."
repository = "https://github.com/MattBelle/scrappy-do"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1", features = ["visit-mut", "full"]}
quote = "1"
proc-macro2 = "1"
